cleanup .gitignore, ignore argtest

--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,36 @@
+# Files
+*.o
+*~
 *.png
 *.mca
-pcaps
-junk
-reg
-region
 *.dat
 *.mcs
-saved
+crstate.dat*
+gmon.out
+mtrace
+outcast.c
+test.c
+*.bplan
+
+# applications
 mcproxy
 mcpdump
 mcsanvil
 minemap
 netmine
 slimemap
+argtest
+varint
+nbttest
+invedit
+chunkradar
+
+# directories
+saved
+pcaps
+junk
+reg
 region
 chunks
 docs
-crstate.dat*
-invedit
-chunkradar
-varint
-nbttest
-*.o
-*~
-gmon.out
-mtrace
-outcast.c
 doc
-*.bplan
