Remove old deprecated stuff

--- a/.gitignore
+++ b/.gitignore
@@ -5,28 +5,22 @@
 *.dat
 *.mcs
 crstate.dat*
-gmon.out
-mtrace
 outcast.c
 test.c
-*.bplan
 bases.txt
 players.txt
+make.depend*
 
 # applications
 mcproxy
 mcpdump
 mcsanvil
 minemap
-netmine
-slimemap
 argtest
 varint
 nbttest
 invedit
-chunkradar
 bptest
-spiral
 
 # directories
 saved
@@ -34,12 +28,5 @@ schematic
 bplan
 png
 csv
-pcaps
-junk
-reg
-region
-chunks
 doc
-maps
 projects
-bases
